src/_input/button/styles.scss
button {
  &.cta {
    border-radius: 2rem;
    border: 0;
    height: 2.5rem;
    padding: 0 1rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    font-size: 0.875rem;
    font-weight: 600;
    letter-spacing: 0.125px;
    transition: background 0.3s ease;
  }

    span {
    &.material-icons {
      font-size: 1.25rem;
      color: inherit;
      margin-left: 0.25rem;
      transition: 0.3s ease;
      transform: translate(0, 0.0625rem);
    }
  }

  &.primary {
    background: var(--electric-blue);
    color: #fff;

    &:hover {
      background: #0A39A7;
    }
    &:active {
      background: #002B90;
    }
  }
  &.secondary {
    background: #fff;
    border: 0.0625rem solid var(--robin-blue);
    color: var(--robin-blue);

    &:hover {
      background: #E6E9F1;
    }
    &:active {
      background: #CCD3E4;
    }
  }
  &.tertiary {
    background: rgba(230, 233, 241, 0.4);
    color: var(--robin-blue);

    &:hover {
      background: #E6E9F1;
    }
    &:active {
      background: #D6DEEF;
    }
  }
  &.text {
    background: #fff;
    padding: 0;
    color: var(--electric-blue);
  }

}

